--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
+    "@types/lodash": "^4.14.188",
     "axios": "^0.21.1",
     "dexie": "^3.2.2",
     "guid-typescript": "^1.0.9",
+    "lodash": "^4.17.21",
     "pinia": "^2.0.11",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
